--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
             align-items: center;
             height: 100vh;
             background-color: #f4f4f9;
-            background-image: url("https://images.unsplash.com/photo-1480497490787-505ec076689f?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Zm9uZG8lMjBkZSUyMHBhbnRhbGxhJTIwZGUlMjBtb250YSVDMyVCMWF8ZW58MHx8MHx8fDA%3D");
+            background-image: url("https://images.unsplash.com/photo-1480497490787-505ec076689f?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Zm9uZG8lMjBwYW50YWxsYSUyMGRlJTIwbW9udGElQzMlQjFhfGVufDB8fDB8fHx8MA%3D%3D");
             background-size: cover;
         }
         form {
@@ -79,6 +79,9 @@
         <textarea id="message" name="message" rows="4" required></textarea>
 
         <button type="submit">Enviar</button>
+        <hr>
+        <button onclick="window.location.href='/home'">Ir al Home</button> <!-- Botón para redirigir a /home -->
     </form>
+
 </body>
 </html>
